// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Landing Renders correctly 1`] = `
<div>
  <div
    class="MuiContainer-root-3 WithStyles(ForwardRef(Container))-root-2 makeStyles-root-1 MuiContainer-maxWidthLg-9"
  >
    <div
      class="MuiPaper-root-15 makeStyles-paper-14 MuiPaper-elevation1-19 MuiPaper-rounded-16"
    >
      <div
        class="MuiGrid-root-43 makeStyles-firstRow-11 MuiGrid-container-44 MuiGrid-align-items-xs-center-52 MuiGrid-justify-content-xs-space-between-63"
      >
        <div>
          <label
            class="MuiFormControlLabel-root-146 makeStyles-checkbox-12"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root-171 MuiIconButton-root-162 PrivateSwitchBase-root-158 MuiCheckbox-root-152 MuiCheckbox-colorPrimary-156 MuiIconButton-colorPrimary-166"
            >
              <span
                class="MuiIconButton-label-170"
              >
                <input
                  class="PrivateSwitchBase-input-161"
                  data-indeterminate="false"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-174"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-486"
              />
            </span>
            <span
              class="MuiTypography-root-183 MuiFormControlLabel-label-151 MuiTypography-body1-185"
            >
              <p
                class="MuiTypography-root-183 MuiTypography-body2-184"
              >
                Only show deposits
              </p>
            </span>
          </label>
          <label
            class="MuiFormControlLabel-root-146 makeStyles-checkbox-12"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root-171 MuiIconButton-root-162 PrivateSwitchBase-root-158 MuiCheckbox-root-152 MuiCheckbox-colorPrimary-156 MuiIconButton-colorPrimary-166"
            >
              <span
                class="MuiIconButton-label-170"
              >
                <input
                  class="PrivateSwitchBase-input-161"
                  data-indeterminate="false"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-174"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-486"
              />
            </span>
            <span
              class="MuiTypography-root-183 MuiFormControlLabel-label-151 MuiTypography-body1-185"
            >
              <p
                class="MuiTypography-root-183 MuiTypography-body2-184"
              >
                Hide dust
              </p>
            </span>
          </label>
        </div>
        <div>
          <div
            aria-label="apy apr selector"
            class="MuiButtonGroup-root-215 makeStyles-apr-13"
            role="group"
          >
            <button
              aria-selected="true"
              class="MuiButtonBase-root-171 MuiButton-root-239 MuiButton-outlined-244 MuiButtonGroup-grouped-221 MuiButtonGroup-groupedHorizontal-222 MuiButtonGroup-groupedOutlined-229 MuiButtonGroup-groupedOutlinedHorizontal-230 MuiButtonGroup-groupedOutlined-229 makeStyles-selected-213 makeStyles-button-214"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-240"
              >
                APY
              </span>
              <span
                class="MuiTouchRipple-root-486"
              />
            </button>
            <button
              aria-selected="false"
              class="MuiButtonBase-root-171 MuiButton-root-239 MuiButton-outlined-244 MuiButtonGroup-grouped-221 MuiButtonGroup-groupedHorizontal-222 MuiButtonGroup-groupedOutlined-229 MuiButtonGroup-groupedOutlinedHorizontal-230 MuiButtonGroup-groupedOutlined-229 makeStyles-button-214"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-240"
              >
                APR
              </span>
              <span
                class="MuiTouchRipple-root-486"
              />
            </button>
          </div>
          <div
            aria-label="currency selector"
            class="MuiButtonGroup-root-215"
            role="group"
          >
            <button
              aria-selected="true"
              class="MuiButtonBase-root-171 MuiButton-root-239 MuiButton-outlined-244 MuiButtonGroup-grouped-221 MuiButtonGroup-groupedHorizontal-222 MuiButtonGroup-groupedOutlined-229 MuiButtonGroup-groupedOutlinedHorizontal-230 MuiButtonGroup-groupedOutlined-229 makeStyles-selected-268 makeStyles-button-269"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-240"
              >
                USD
              </span>
              <span
                class="MuiTouchRipple-root-486"
              />
            </button>
            <button
              aria-selected="false"
              class="MuiButtonBase-root-171 MuiButton-root-239 MuiButton-outlined-244 MuiButtonGroup-grouped-221 MuiButtonGroup-groupedHorizontal-222 MuiButtonGroup-groupedOutlined-229 MuiButtonGroup-groupedOutlinedHorizontal-230 MuiButtonGroup-groupedOutlined-229 makeStyles-button-269"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-240"
              >
                BTC
              </span>
              <span
                class="MuiTouchRipple-root-486"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-43 makeStyles-root-270 MuiGrid-container-44"
      >
        <div
          class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-true-77"
        >
          <div
            class="MuiFormControl-root-274 MuiTextField-root-273 makeStyles-formControl-271"
          >
            <label
              class="MuiFormLabel-root-290 MuiInputLabel-root-278 MuiInputLabel-formControl-284 MuiInputLabel-animated-287 MuiInputLabel-marginDense-285 MuiInputLabel-outlined-289"
              data-shrink="false"
              for="status-selector-id"
              id="status-selector-id-label"
            >
              Status
            </label>
            <div
              class="MuiInputBase-root-324 MuiOutlinedInput-root-309 MuiInputBase-formControl-325 MuiInputBase-marginDense-331 MuiOutlinedInput-marginDense-316"
            >
              <div
                aria-haspopup="listbox"
                aria-labelledby="status-selector-id-label status-selector-id"
                class="MuiSelect-root-298 MuiSelect-select-299 MuiSelect-selectMenu-302 MuiSelect-outlined-301 MuiInputBase-input-335 MuiOutlinedInput-input-319 MuiInputBase-inputMarginDense-336 MuiOutlinedInput-inputMarginDense-320"
                id="status-selector-id"
                role="button"
                tabindex="0"
              >
                <span>
                  ​
                </span>
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput-308"
                data-testid="status-selector-input"
                name="Status"
                tabindex="-1"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-174 MuiSelect-icon-304 MuiSelect-iconOutlined-307"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-346 MuiOutlinedInput-notchedOutline-318"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-348"
                >
                  <span>
                    Status
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-true-77"
        >
          <div
            class="MuiFormControl-root-274 MuiTextField-root-273 makeStyles-formControl-350"
          >
            <label
              class="MuiFormLabel-root-290 MuiInputLabel-root-278 MuiInputLabel-formControl-284 MuiInputLabel-animated-287 MuiInputLabel-marginDense-285 MuiInputLabel-outlined-289"
              data-shrink="false"
              for="platform-selector-id"
              id="platform-selector-id-label"
            >
              Platform
            </label>
            <div
              class="MuiInputBase-root-324 MuiOutlinedInput-root-309 MuiInputBase-formControl-325 MuiInputBase-marginDense-331 MuiOutlinedInput-marginDense-316"
            >
              <div
                aria-haspopup="listbox"
                aria-labelledby="platform-selector-id-label platform-selector-id"
                class="MuiSelect-root-298 MuiSelect-select-299 MuiSelect-selectMenu-302 MuiSelect-outlined-301 MuiInputBase-input-335 MuiOutlinedInput-input-319 MuiInputBase-inputMarginDense-336 MuiOutlinedInput-inputMarginDense-320"
                id="platform-selector-id"
                role="button"
                tabindex="0"
              >
                <span>
                  ​
                </span>
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput-308"
                data-testid="platform-selector-input"
                name="Platform"
                tabindex="-1"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-174 MuiSelect-icon-304 MuiSelect-iconOutlined-307"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-346 MuiOutlinedInput-notchedOutline-318"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-348"
                >
                  <span>
                    Platform
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-true-77"
        >
          <div
            class="MuiFormControl-root-274 MuiTextField-root-273 makeStyles-formControl-352"
          >
            <label
              class="MuiFormLabel-root-290 MuiInputLabel-root-278 MuiInputLabel-formControl-284 MuiInputLabel-animated-287 MuiInputLabel-marginDense-285 MuiInputLabel-outlined-289"
              data-shrink="false"
              for="rewards-selector-id"
              id="rewards-selector-id-label"
            >
              Rewards
            </label>
            <div
              class="MuiInputBase-root-324 MuiOutlinedInput-root-309 MuiInputBase-formControl-325 MuiInputBase-marginDense-331 MuiOutlinedInput-marginDense-316"
            >
              <div
                aria-haspopup="listbox"
                aria-labelledby="rewards-selector-id-label rewards-selector-id"
                class="MuiSelect-root-298 MuiSelect-select-299 MuiSelect-selectMenu-302 MuiSelect-outlined-301 MuiInputBase-input-335 MuiOutlinedInput-input-319 MuiInputBase-inputMarginDense-336 MuiOutlinedInput-inputMarginDense-320"
                id="rewards-selector-id"
                role="button"
                tabindex="0"
              >
                <span>
                  ​
                </span>
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput-308"
                data-testid="rewards-selector-input"
                tabindex="-1"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-174 MuiSelect-icon-304 MuiSelect-iconOutlined-307"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-346 MuiOutlinedInput-notchedOutline-318"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-348"
                >
                  <span>
                    Rewards
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-true-77 MuiGrid-grid-md-true-105 MuiGrid-grid-lg-6-125"
        >
          <div
            class="MuiFormControl-root-274 MuiTextField-root-273 makeStyles-root-354"
          >
            <div
              class="MuiInputBase-root-324 MuiOutlinedInput-root-309 MuiInputBase-formControl-325 MuiInputBase-adornedEnd-329 MuiOutlinedInput-adornedEnd-314 MuiInputBase-marginDense-331 MuiOutlinedInput-marginDense-316"
            >
              <input
                aria-invalid="false"
                aria-label="Vault Search"
                class="MuiInputBase-input-335 MuiOutlinedInput-input-319 MuiInputBase-inputAdornedEnd-340 MuiOutlinedInput-inputAdornedEnd-323 MuiInputBase-inputMarginDense-336 MuiOutlinedInput-inputMarginDense-320"
                placeholder="Search by vault name, token, rewards..."
                type="text"
                value=""
              />
              <div
                class="MuiInputAdornment-root-356 MuiInputAdornment-positionEnd-359 MuiInputAdornment-marginDense-362"
              >
                <button
                  aria-label="search"
                  class="MuiButtonBase-root-171 MuiIconButton-root-162 makeStyles-icon-355 MuiIconButton-sizeSmall-169"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label-170"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-174"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root-486"
                  />
                </button>
              </div>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-346 MuiOutlinedInput-notchedOutline-318"
                style="padding-left: 8px;"
              >
                <legend
                  class="PrivateNotchedOutline-legend-347"
                  style="width: 0.01px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
        >
          <button
            class="MuiButtonBase-root-171 MuiButton-root-239 MuiButton-text-241 MuiButton-textPrimary-242 MuiButton-fullWidth-262"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label-240"
            >
              CLEAR ALL
            </span>
            <span
              class="MuiTouchRipple-root-486"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-15 MuiGrid-root-43 makeStyles-root-393 MuiGrid-container-44 MuiGrid-item-45 MuiPaper-elevation1-19 MuiPaper-rounded-16"
    >
      <div
        class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-spacing-xs-2-67"
      >
        <div
          class="MuiGrid-root-43 makeStyles-spacingItem-395 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
        />
        <div
          class="MuiGrid-root-43 makeStyles-title-386 makeStyles-columnTitle-391 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-align-items-xs-center-52 MuiGrid-grid-xs-true-77 MuiGrid-grid-lg-4-123"
        >
          <p
            class="MuiTypography-root-183 makeStyles-title-386 MuiTypography-body2-184 MuiTypography-colorTextSecondary-209"
          >
            Vault
          </p>
          <button
            aria-label="sort descending by name"
            class="MuiButtonBase-root-171 MuiIconButton-root-162 makeStyles-sortIcon-387 makeStyles-nonSetSort-389"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-170"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-387"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-486"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-43 makeStyles-title-386 makeStyles-columnTitle-391 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-align-items-xs-center-52 MuiGrid-justify-content-xs-flex-end-62 MuiGrid-grid-xs-true-77"
        >
          <p
            class="MuiTypography-root-183 MuiTypography-body2-184 MuiTypography-colorTextSecondary-209"
          >
            APY
          </p>
          <button
            aria-label="sort descending by APR"
            class="MuiButtonBase-root-171 MuiIconButton-root-162 makeStyles-sortIcon-387 makeStyles-nonSetSort-389"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-170"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-387"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-486"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-43 makeStyles-title-386 makeStyles-columnTitle-391 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-align-items-xs-center-52 MuiGrid-justify-content-xs-flex-end-62 MuiGrid-grid-xs-true-77"
        >
          <p
            class="MuiTypography-root-183 MuiTypography-body2-184 MuiTypography-colorTextSecondary-209"
          >
            My Deposits
          </p>
          <button
            aria-label="sort descending by balance"
            class="MuiButtonBase-root-171 MuiIconButton-root-162 makeStyles-sortIcon-387 makeStyles-nonSetSort-389"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-170"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-387"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-486"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-43 makeStyles-title-386 makeStyles-columnTitle-391 makeStyles-tvlColumn-392 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-align-items-xs-center-52 MuiGrid-justify-content-xs-flex-end-62 MuiGrid-grid-xs-true-77"
        >
          <p
            class="MuiTypography-root-183 MuiTypography-body2-184 MuiTypography-colorTextSecondary-209"
          >
            TVL
          </p>
          <button
            aria-label="sort descending by TVL"
            class="MuiButtonBase-root-171 MuiIconButton-root-162 makeStyles-sortIcon-387 makeStyles-nonSetSort-389"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-170"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-387"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-486"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-15 MuiCard-root-406 MuiGrid-root-43 makeStyles-root-397 MuiGrid-container-44 MuiGrid-direction-xs-column-47 MuiPaper-elevation1-19 MuiPaper-rounded-16"
    >
      <div
        class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-spacing-xs-2-67 MuiGrid-item-45"
      >
        <div
          class="MuiGrid-root-43 makeStyles-iconBadgeContainer-401 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
        >
          <div
            class="makeStyles-root-407"
          >
            <img
              alt="curve-renBTC-wBTC-sBTC logo"
              class="makeStyles-position-408"
              src="/assets/icons/curve-renbtc-wbtc-sbtc.svg"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-true-77 MuiGrid-grid-lg-4-123"
        >
          <h6
            class="MuiTypography-root-183 makeStyles-vaultName-402 MuiTypography-subtitle1-194"
          >
            Curve.fi renBTC/wBTC/sBTC
          </h6>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-justify-content-xs-flex-end-62 MuiGrid-grid-xs-true-77"
        >
          <div
            class="MuiBox-root-412 MuiBox-root-413"
          >
            <p
              class="MuiTypography-root-183 makeStyles-apr-409 MuiTypography-body1-185 MuiTypography-colorTextPrimary-208 MuiTypography-displayInline-211"
            >
              0.25%
            </p>
            <img
              class="makeStyles-apyInfo-411"
              src="/assets/icons/apy-info.svg"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-justify-content-xs-flex-end-62 MuiGrid-grid-xs-true-77"
        >
          <div
            class="MuiBox-root-412 MuiBox-root-423"
          >
            <p
              class="MuiTypography-root-183 makeStyles-itemText-399 MuiTypography-body1-185"
            >
              $-
            </p>
          </div>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-justify-content-xs-flex-end-62 MuiGrid-grid-xs-true-77"
        >
          <div
            class="MuiBox-root-412 MuiBox-root-427"
          >
            <p
              class="MuiTypography-root-183 makeStyles-itemText-399 MuiTypography-body1-185"
            />
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-43 makeStyles-tagsContainer-404 MuiGrid-container-44 MuiGrid-spacing-xs-2-67 MuiGrid-item-45 MuiGrid-align-items-xs-center-52"
      >
        <div
          class="MuiGrid-root-43 makeStyles-iconBadgeContainer-401 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
        />
        <div
          class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-true-77"
        >
          <div
            class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-spacing-xs-2-67"
          >
            <div
              class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
            >
              <span
                class="MuiTypography-root-183 makeStyles-label-429 makeStyles-clickableLabel-431 MuiTypography-caption-186 MuiTypography-displayInline-211"
              >
                Rewards:
              </span>
              <div
                class="MuiChip-root-432 makeStyles-tag-428 makeStyles-clickableTag-430 MuiChip-sizeSmall-433"
              >
                <span
                  class="MuiChip-label-454 MuiChip-labelSmall-455"
                >
                  Ecosystem Helper
                </span>
              </div>
            </div>
            <div
              class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
            >
              <span
                class="MuiTypography-root-183 makeStyles-label-429 MuiTypography-caption-186 MuiTypography-displayInline-211"
              >
                Platform:
              </span>
              <div
                class="MuiChip-root-432 makeStyles-tag-428 MuiChip-sizeSmall-433"
              >
                <span
                  class="MuiChip-label-454 MuiChip-labelSmall-455"
                >
                  Convex
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-15 MuiCard-root-406 MuiGrid-root-43 makeStyles-root-397 MuiGrid-container-44 MuiGrid-direction-xs-column-47 MuiPaper-elevation1-19 MuiPaper-rounded-16"
    >
      <div
        class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-spacing-xs-2-67 MuiGrid-item-45"
      >
        <div
          class="MuiGrid-root-43 makeStyles-iconBadgeContainer-401 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
        >
          <div
            class="makeStyles-root-407"
          >
            <img
              alt="BADGER logo"
              class="makeStyles-position-462"
              src="/assets/icons/badger.svg"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-true-77 MuiGrid-grid-lg-4-123"
        >
          <h6
            class="MuiTypography-root-183 makeStyles-vaultName-402 MuiTypography-subtitle1-194"
          >
            Badger
          </h6>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-justify-content-xs-flex-end-62 MuiGrid-grid-xs-true-77"
        >
          <div
            class="MuiBox-root-412 MuiBox-root-463"
          >
            <p
              class="MuiTypography-root-183 makeStyles-apr-409 MuiTypography-body1-185 MuiTypography-colorTextPrimary-208 MuiTypography-displayInline-211"
            >
              8.17%
            </p>
            <img
              class="makeStyles-apyInfo-411"
              src="/assets/icons/apy-info.svg"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-justify-content-xs-flex-end-62 MuiGrid-grid-xs-true-77"
        >
          <div
            class="MuiBox-root-412 MuiBox-root-466"
          >
            <p
              class="MuiTypography-root-183 makeStyles-itemText-399 MuiTypography-body1-185"
            >
              $-
            </p>
          </div>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-justify-content-xs-flex-end-62 MuiGrid-grid-xs-true-77"
        >
          <div
            class="MuiBox-root-412 MuiBox-root-469"
          >
            <p
              class="MuiTypography-root-183 makeStyles-itemText-399 MuiTypography-body1-185"
            />
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-43 makeStyles-tagsContainer-404 MuiGrid-container-44 MuiGrid-spacing-xs-2-67 MuiGrid-item-45 MuiGrid-align-items-xs-center-52"
      >
        <div
          class="MuiGrid-root-43 makeStyles-iconBadgeContainer-401 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
        />
        <div
          class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-true-77"
        >
          <div
            class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-spacing-xs-2-67"
          >
            <div
              class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
            >
              <span
                class="MuiTypography-root-183 makeStyles-label-429 makeStyles-clickableLabel-431 MuiTypography-caption-186 MuiTypography-displayInline-211"
              >
                Rewards:
              </span>
              <div
                class="MuiChip-root-432 makeStyles-tag-428 makeStyles-clickableTag-430 MuiChip-sizeSmall-433"
              >
                <span
                  class="MuiChip-label-454 MuiChip-labelSmall-455"
                >
                  DCA
                </span>
              </div>
            </div>
            <div
              class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
            >
              <span
                class="MuiTypography-root-183 makeStyles-label-429 MuiTypography-caption-186 MuiTypography-displayInline-211"
              >
                Platform:
              </span>
              <div
                class="MuiChip-root-432 makeStyles-tag-428 MuiChip-sizeSmall-433"
              >
                <span
                  class="MuiChip-label-454 MuiChip-labelSmall-455"
                >
                  Badger
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-15 MuiCard-root-406 MuiGrid-root-43 makeStyles-root-397 MuiGrid-container-44 MuiGrid-direction-xs-column-47 MuiPaper-elevation1-19 MuiPaper-rounded-16"
    >
      <div
        class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-spacing-xs-2-67 MuiGrid-item-45"
      >
        <div
          class="MuiGrid-root-43 makeStyles-iconBadgeContainer-401 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
        >
          <div
            class="makeStyles-root-407"
          >
            <img
              alt="DIGG logo"
              class="makeStyles-position-470"
              src="/assets/icons/digg.svg"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-true-77 MuiGrid-grid-lg-4-123"
        >
          <h6
            class="MuiTypography-root-183 makeStyles-vaultName-402 MuiTypography-subtitle1-194"
          >
            Digg
          </h6>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-justify-content-xs-flex-end-62 MuiGrid-grid-xs-true-77"
        >
          <div
            class="MuiBox-root-412 MuiBox-root-471"
          >
            <p
              class="MuiTypography-root-183 makeStyles-apr-409 MuiTypography-body1-185 MuiTypography-colorTextPrimary-208 MuiTypography-displayInline-211"
            >
              8.17%
            </p>
            <img
              class="makeStyles-apyInfo-411"
              src="/assets/icons/apy-info.svg"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-justify-content-xs-flex-end-62 MuiGrid-grid-xs-true-77"
        >
          <div
            class="MuiBox-root-412 MuiBox-root-474"
          >
            <p
              class="MuiTypography-root-183 makeStyles-itemText-399 MuiTypography-body1-185"
            >
              $-
            </p>
          </div>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-justify-content-xs-flex-end-62 MuiGrid-grid-xs-true-77"
        >
          <div
            class="MuiBox-root-412 MuiBox-root-477"
          >
            <p
              class="MuiTypography-root-183 makeStyles-itemText-399 MuiTypography-body1-185"
            />
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-43 makeStyles-tagsContainer-404 MuiGrid-container-44 MuiGrid-spacing-xs-2-67 MuiGrid-item-45 MuiGrid-align-items-xs-center-52"
      >
        <div
          class="MuiGrid-root-43 makeStyles-iconBadgeContainer-401 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
        />
        <div
          class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-true-77"
        >
          <div
            class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-spacing-xs-2-67"
          >
            <div
              class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
            >
              <span
                class="MuiTypography-root-183 makeStyles-label-429 MuiTypography-caption-186 MuiTypography-displayInline-211"
              >
                Platform:
              </span>
              <div
                class="MuiChip-root-432 makeStyles-tag-428 MuiChip-sizeSmall-433"
              >
                <span
                  class="MuiChip-label-454 MuiChip-labelSmall-455"
                >
                  Badger
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Landing Renders mobile version correctly 1`] = `
<div>
  <div
    class="MuiContainer-root-3 WithStyles(ForwardRef(Container))-root-2 makeStyles-root-1 MuiContainer-maxWidthLg-9"
  >
    <div
      class="MuiPaper-root-15 makeStyles-paper-14 MuiPaper-elevation1-19 MuiPaper-rounded-16"
    >
      <div
        class="MuiGrid-root-43 MuiGrid-container-44"
      >
        <div
          class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-true-77"
        >
          <label
            class="MuiFormControlLabel-root-146"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root-171 MuiIconButton-root-162 PrivateSwitchBase-root-158 MuiCheckbox-root-152 MuiCheckbox-colorPrimary-156 MuiIconButton-colorPrimary-166"
            >
              <span
                class="MuiIconButton-label-170"
              >
                <input
                  class="PrivateSwitchBase-input-161"
                  data-indeterminate="false"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-174"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-488"
              />
            </span>
            <span
              class="MuiTypography-root-183 MuiFormControlLabel-label-151 MuiTypography-body1-185"
            >
              <p
                class="MuiTypography-root-183 MuiTypography-body2-184"
              >
                Only show deposits
              </p>
            </span>
          </label>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-justify-content-xs-flex-end-62 MuiGrid-grid-xs-true-77"
        >
          <button
            class="MuiButtonBase-root-171 MuiButton-root-239 MuiButton-text-241 makeStyles-button-486"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label-240 makeStyles-buttonLabel-487"
            >
              <p
                class="MuiTypography-root-183 MuiTypography-body2-184 MuiTypography-displayInline-211"
              >
                Filters
              </p>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-174"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-488"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-15 MuiGrid-root-43 makeStyles-root-393 MuiGrid-container-44 MuiGrid-item-45 MuiPaper-elevation1-19 MuiPaper-rounded-16"
    >
      <div
        class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-spacing-xs-2-67"
      >
        <div
          class="MuiGrid-root-43 makeStyles-spacingItem-395 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
        />
        <div
          class="MuiGrid-root-43 makeStyles-title-386 makeStyles-columnTitle-391 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-align-items-xs-center-52 MuiGrid-grid-xs-true-77 MuiGrid-grid-lg-4-123"
        >
          <p
            class="MuiTypography-root-183 makeStyles-title-386 MuiTypography-body2-184 MuiTypography-colorTextSecondary-209"
          >
            Vault
          </p>
          <button
            aria-label="sort descending by name"
            class="MuiButtonBase-root-171 MuiIconButton-root-162 makeStyles-sortIcon-387 makeStyles-nonSetSort-389"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-170"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-387"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-488"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-43 makeStyles-title-386 makeStyles-columnTitle-391 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-align-items-xs-center-52 MuiGrid-grid-xs-true-77"
        >
          <p
            class="MuiTypography-root-183 MuiTypography-body2-184 MuiTypography-colorTextSecondary-209"
          >
            APY
          </p>
          <button
            aria-label="sort descending by APR"
            class="MuiButtonBase-root-171 MuiIconButton-root-162 makeStyles-sortIcon-387 makeStyles-nonSetSort-389"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-170"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-387"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-488"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-43 makeStyles-title-386 makeStyles-columnTitle-391 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-align-items-xs-center-52 MuiGrid-grid-xs-true-77"
        >
          <p
            class="MuiTypography-root-183 MuiTypography-body2-184 MuiTypography-colorTextSecondary-209"
          >
            My Deposits
          </p>
          <button
            aria-label="sort descending by balance"
            class="MuiButtonBase-root-171 MuiIconButton-root-162 makeStyles-sortIcon-387 makeStyles-nonSetSort-389"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-170"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-387"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-488"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-43 makeStyles-title-386 makeStyles-columnTitle-391 makeStyles-tvlColumn-392 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-align-items-xs-center-52 MuiGrid-grid-xs-true-77"
        >
          <p
            class="MuiTypography-root-183 MuiTypography-body2-184 MuiTypography-colorTextSecondary-209"
          >
            TVL
          </p>
          <button
            aria-label="sort descending by TVL"
            class="MuiButtonBase-root-171 MuiIconButton-root-162 makeStyles-sortIcon-387 makeStyles-nonSetSort-389"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-170"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-387"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-488"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-15 MuiCard-root-406 MuiGrid-root-43 makeStyles-root-498 MuiGrid-container-44 MuiGrid-direction-xs-column-47 MuiPaper-elevation1-19 MuiPaper-rounded-16"
    >
      <div
        class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45"
      >
        <div
          class="makeStyles-root-407"
        >
          <img
            alt="curve-renBTC-wBTC-sBTC logo"
            class="makeStyles-position-501"
            src="/assets/icons/curve-renbtc-wbtc-sbtc.svg"
          />
        </div>
        <h6
          class="MuiTypography-root-183 makeStyles-name-500 MuiTypography-subtitle1-194 MuiTypography-displayInline-211"
        >
          Curve.fi renBTC/wBTC/sBTC
        </h6>
      </div>
      <div
        class="MuiGrid-root-43 makeStyles-info-499 MuiGrid-container-44 MuiGrid-item-45"
      >
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-direction-xs-column-47 MuiGrid-grid-xs-true-77"
        >
          <p
            class="MuiTypography-root-183 MuiTypography-body1-185"
          >
            APY
          </p>
          <div
            class="MuiBox-root-412 MuiBox-root-502"
          >
            <p
              class="MuiTypography-root-183 makeStyles-apr-409 MuiTypography-body1-185 MuiTypography-colorTextPrimary-208 MuiTypography-displayInline-211"
            >
              0.25%
            </p>
            <img
              class="makeStyles-apyInfo-411"
              src="/assets/icons/apy-info.svg"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-direction-xs-column-47 MuiGrid-grid-xs-true-77"
        >
          <p
            class="MuiTypography-root-183 MuiTypography-body1-185"
          >
            My Deposits
          </p>
          <div
            class="MuiBox-root-412 MuiBox-root-505"
          >
            <p
              class="MuiTypography-root-183 MuiTypography-body1-185"
            >
              $-
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-43 MuiGrid-item-45"
      >
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-spacing-xs-1-66"
        >
          <div
            class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
          >
            <div
              class="MuiChip-root-432 makeStyles-tag-428 makeStyles-clickableTag-430 MuiChip-sizeSmall-433"
            >
              <span
                class="MuiChip-label-454 MuiChip-labelSmall-455"
              >
                Ecosystem Helper
              </span>
            </div>
          </div>
          <div
            class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
          >
            <div
              class="MuiChip-root-432 makeStyles-tag-428 MuiChip-sizeSmall-433"
            >
              <span
                class="MuiChip-label-454 MuiChip-labelSmall-455"
              >
                Convex
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-15 MuiCard-root-406 MuiGrid-root-43 makeStyles-root-498 MuiGrid-container-44 MuiGrid-direction-xs-column-47 MuiPaper-elevation1-19 MuiPaper-rounded-16"
    >
      <div
        class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45"
      >
        <div
          class="makeStyles-root-407"
        >
          <img
            alt="BADGER logo"
            class="makeStyles-position-506"
            src="/assets/icons/badger.svg"
          />
        </div>
        <h6
          class="MuiTypography-root-183 makeStyles-name-500 MuiTypography-subtitle1-194 MuiTypography-displayInline-211"
        >
          Badger
        </h6>
      </div>
      <div
        class="MuiGrid-root-43 makeStyles-info-499 MuiGrid-container-44 MuiGrid-item-45"
      >
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-direction-xs-column-47 MuiGrid-grid-xs-true-77"
        >
          <p
            class="MuiTypography-root-183 MuiTypography-body1-185"
          >
            APY
          </p>
          <div
            class="MuiBox-root-412 MuiBox-root-507"
          >
            <p
              class="MuiTypography-root-183 makeStyles-apr-409 MuiTypography-body1-185 MuiTypography-colorTextPrimary-208 MuiTypography-displayInline-211"
            >
              8.17%
            </p>
            <img
              class="makeStyles-apyInfo-411"
              src="/assets/icons/apy-info.svg"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-direction-xs-column-47 MuiGrid-grid-xs-true-77"
        >
          <p
            class="MuiTypography-root-183 MuiTypography-body1-185"
          >
            My Deposits
          </p>
          <div
            class="MuiBox-root-412 MuiBox-root-510"
          >
            <p
              class="MuiTypography-root-183 MuiTypography-body1-185"
            >
              $-
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-43 MuiGrid-item-45"
      >
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-spacing-xs-1-66"
        >
          <div
            class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
          >
            <div
              class="MuiChip-root-432 makeStyles-tag-428 makeStyles-clickableTag-430 MuiChip-sizeSmall-433"
            >
              <span
                class="MuiChip-label-454 MuiChip-labelSmall-455"
              >
                DCA
              </span>
            </div>
          </div>
          <div
            class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
          >
            <div
              class="MuiChip-root-432 makeStyles-tag-428 MuiChip-sizeSmall-433"
            >
              <span
                class="MuiChip-label-454 MuiChip-labelSmall-455"
              >
                Badger
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-15 MuiCard-root-406 MuiGrid-root-43 makeStyles-root-498 MuiGrid-container-44 MuiGrid-direction-xs-column-47 MuiPaper-elevation1-19 MuiPaper-rounded-16"
    >
      <div
        class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45"
      >
        <div
          class="makeStyles-root-407"
        >
          <img
            alt="DIGG logo"
            class="makeStyles-position-511"
            src="/assets/icons/digg.svg"
          />
        </div>
        <h6
          class="MuiTypography-root-183 makeStyles-name-500 MuiTypography-subtitle1-194 MuiTypography-displayInline-211"
        >
          Digg
        </h6>
      </div>
      <div
        class="MuiGrid-root-43 makeStyles-info-499 MuiGrid-container-44 MuiGrid-item-45"
      >
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-direction-xs-column-47 MuiGrid-grid-xs-true-77"
        >
          <p
            class="MuiTypography-root-183 MuiTypography-body1-185"
          >
            APY
          </p>
          <div
            class="MuiBox-root-412 MuiBox-root-512"
          >
            <p
              class="MuiTypography-root-183 makeStyles-apr-409 MuiTypography-body1-185 MuiTypography-colorTextPrimary-208 MuiTypography-displayInline-211"
            >
              8.17%
            </p>
            <img
              class="makeStyles-apyInfo-411"
              src="/assets/icons/apy-info.svg"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-direction-xs-column-47 MuiGrid-grid-xs-true-77"
        >
          <p
            class="MuiTypography-root-183 MuiTypography-body1-185"
          >
            My Deposits
          </p>
          <div
            class="MuiBox-root-412 MuiBox-root-515"
          >
            <p
              class="MuiTypography-root-183 MuiTypography-body1-185"
            >
              $-
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-43 MuiGrid-item-45"
      >
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-spacing-xs-1-66"
        >
          <div
            class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
          >
            <div
              class="MuiChip-root-432 makeStyles-tag-428 MuiChip-sizeSmall-433"
            >
              <span
                class="MuiChip-label-454 MuiChip-labelSmall-455"
              >
                Badger
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Landing Renders tablet version correctly 1`] = `
<div>
  <div
    class="MuiContainer-root-3 WithStyles(ForwardRef(Container))-root-2 makeStyles-root-1 MuiContainer-maxWidthLg-9"
  >
    <div
      class="MuiPaper-root-15 makeStyles-paper-14 MuiPaper-elevation1-19 MuiPaper-rounded-16"
    >
      <div
        class="MuiGrid-root-43 MuiGrid-container-44"
      >
        <div
          class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-true-77"
        >
          <label
            class="MuiFormControlLabel-root-146"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root-171 MuiIconButton-root-162 PrivateSwitchBase-root-158 MuiCheckbox-root-152 MuiCheckbox-colorPrimary-156 MuiIconButton-colorPrimary-166"
            >
              <span
                class="MuiIconButton-label-170"
              >
                <input
                  class="PrivateSwitchBase-input-161"
                  data-indeterminate="false"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-174"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-488"
              />
            </span>
            <span
              class="MuiTypography-root-183 MuiFormControlLabel-label-151 MuiTypography-body1-185"
            >
              <p
                class="MuiTypography-root-183 MuiTypography-body2-184"
              >
                Only show deposits
              </p>
            </span>
          </label>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-justify-content-xs-flex-end-62 MuiGrid-grid-xs-true-77"
        >
          <button
            class="MuiButtonBase-root-171 MuiButton-root-239 MuiButton-text-241 makeStyles-button-486"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label-240 makeStyles-buttonLabel-487"
            >
              <p
                class="MuiTypography-root-183 MuiTypography-body2-184 MuiTypography-displayInline-211"
              >
                Filters & Search
              </p>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-174"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-488"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-15 MuiGrid-root-43 makeStyles-root-393 MuiGrid-container-44 MuiGrid-item-45 MuiPaper-elevation1-19 MuiPaper-rounded-16"
    >
      <div
        class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-spacing-xs-2-67"
      >
        <div
          class="MuiGrid-root-43 makeStyles-spacingItem-395 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
        />
        <div
          class="MuiGrid-root-43 makeStyles-title-386 makeStyles-columnTitle-391 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-align-items-xs-center-52 MuiGrid-grid-xs-true-77 MuiGrid-grid-lg-4-123"
        >
          <p
            class="MuiTypography-root-183 makeStyles-title-386 MuiTypography-body2-184 MuiTypography-colorTextSecondary-209"
          >
            Vault
          </p>
          <button
            aria-label="sort descending by name"
            class="MuiButtonBase-root-171 MuiIconButton-root-162 makeStyles-sortIcon-387 makeStyles-nonSetSort-389"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-170"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-387"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-488"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-43 makeStyles-title-386 makeStyles-columnTitle-391 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-align-items-xs-center-52 MuiGrid-grid-xs-true-77"
        >
          <p
            class="MuiTypography-root-183 MuiTypography-body2-184 MuiTypography-colorTextSecondary-209"
          >
            APY
          </p>
          <button
            aria-label="sort descending by APR"
            class="MuiButtonBase-root-171 MuiIconButton-root-162 makeStyles-sortIcon-387 makeStyles-nonSetSort-389"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-170"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-387"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-488"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-43 makeStyles-title-386 makeStyles-columnTitle-391 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-align-items-xs-center-52 MuiGrid-grid-xs-true-77"
        >
          <p
            class="MuiTypography-root-183 MuiTypography-body2-184 MuiTypography-colorTextSecondary-209"
          >
            My Deposits
          </p>
          <button
            aria-label="sort descending by balance"
            class="MuiButtonBase-root-171 MuiIconButton-root-162 makeStyles-sortIcon-387 makeStyles-nonSetSort-389"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-170"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-387"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-488"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-43 makeStyles-title-386 makeStyles-columnTitle-391 makeStyles-tvlColumn-392 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-align-items-xs-center-52 MuiGrid-grid-xs-true-77"
        >
          <p
            class="MuiTypography-root-183 MuiTypography-body2-184 MuiTypography-colorTextSecondary-209"
          >
            TVL
          </p>
          <button
            aria-label="sort descending by TVL"
            class="MuiButtonBase-root-171 MuiIconButton-root-162 makeStyles-sortIcon-387 makeStyles-nonSetSort-389"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-170"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-387"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-488"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-15 MuiCard-root-406 MuiGrid-root-43 makeStyles-root-498 MuiGrid-container-44 MuiGrid-direction-xs-column-47 MuiPaper-elevation1-19 MuiPaper-rounded-16"
    >
      <div
        class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45"
      >
        <div
          class="makeStyles-root-407"
        >
          <img
            alt="curve-renBTC-wBTC-sBTC logo"
            class="makeStyles-position-501"
            src="/assets/icons/curve-renbtc-wbtc-sbtc.svg"
          />
        </div>
        <h6
          class="MuiTypography-root-183 makeStyles-name-500 MuiTypography-subtitle1-194 MuiTypography-displayInline-211"
        >
          Curve.fi renBTC/wBTC/sBTC
        </h6>
      </div>
      <div
        class="MuiGrid-root-43 makeStyles-info-499 MuiGrid-container-44 MuiGrid-item-45"
      >
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-direction-xs-column-47 MuiGrid-grid-xs-true-77"
        >
          <p
            class="MuiTypography-root-183 MuiTypography-body1-185"
          >
            APY
          </p>
          <div
            class="MuiBox-root-412 MuiBox-root-502"
          >
            <p
              class="MuiTypography-root-183 makeStyles-apr-409 MuiTypography-body1-185 MuiTypography-colorTextPrimary-208 MuiTypography-displayInline-211"
            >
              0.25%
            </p>
            <img
              class="makeStyles-apyInfo-411"
              src="/assets/icons/apy-info.svg"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-direction-xs-column-47 MuiGrid-grid-xs-true-77"
        >
          <p
            class="MuiTypography-root-183 MuiTypography-body1-185"
          >
            My Deposits
          </p>
          <div
            class="MuiBox-root-412 MuiBox-root-505"
          >
            <p
              class="MuiTypography-root-183 MuiTypography-body1-185"
            >
              $-
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-43 MuiGrid-item-45"
      >
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-spacing-xs-1-66"
        >
          <div
            class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
          >
            <div
              class="MuiChip-root-432 makeStyles-tag-428 makeStyles-clickableTag-430 MuiChip-sizeSmall-433"
            >
              <span
                class="MuiChip-label-454 MuiChip-labelSmall-455"
              >
                Ecosystem Helper
              </span>
            </div>
          </div>
          <div
            class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
          >
            <div
              class="MuiChip-root-432 makeStyles-tag-428 MuiChip-sizeSmall-433"
            >
              <span
                class="MuiChip-label-454 MuiChip-labelSmall-455"
              >
                Convex
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-15 MuiCard-root-406 MuiGrid-root-43 makeStyles-root-498 MuiGrid-container-44 MuiGrid-direction-xs-column-47 MuiPaper-elevation1-19 MuiPaper-rounded-16"
    >
      <div
        class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45"
      >
        <div
          class="makeStyles-root-407"
        >
          <img
            alt="BADGER logo"
            class="makeStyles-position-506"
            src="/assets/icons/badger.svg"
          />
        </div>
        <h6
          class="MuiTypography-root-183 makeStyles-name-500 MuiTypography-subtitle1-194 MuiTypography-displayInline-211"
        >
          Badger
        </h6>
      </div>
      <div
        class="MuiGrid-root-43 makeStyles-info-499 MuiGrid-container-44 MuiGrid-item-45"
      >
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-direction-xs-column-47 MuiGrid-grid-xs-true-77"
        >
          <p
            class="MuiTypography-root-183 MuiTypography-body1-185"
          >
            APY
          </p>
          <div
            class="MuiBox-root-412 MuiBox-root-507"
          >
            <p
              class="MuiTypography-root-183 makeStyles-apr-409 MuiTypography-body1-185 MuiTypography-colorTextPrimary-208 MuiTypography-displayInline-211"
            >
              8.17%
            </p>
            <img
              class="makeStyles-apyInfo-411"
              src="/assets/icons/apy-info.svg"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-direction-xs-column-47 MuiGrid-grid-xs-true-77"
        >
          <p
            class="MuiTypography-root-183 MuiTypography-body1-185"
          >
            My Deposits
          </p>
          <div
            class="MuiBox-root-412 MuiBox-root-510"
          >
            <p
              class="MuiTypography-root-183 MuiTypography-body1-185"
            >
              $-
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-43 MuiGrid-item-45"
      >
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-spacing-xs-1-66"
        >
          <div
            class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
          >
            <div
              class="MuiChip-root-432 makeStyles-tag-428 makeStyles-clickableTag-430 MuiChip-sizeSmall-433"
            >
              <span
                class="MuiChip-label-454 MuiChip-labelSmall-455"
              >
                DCA
              </span>
            </div>
          </div>
          <div
            class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
          >
            <div
              class="MuiChip-root-432 makeStyles-tag-428 MuiChip-sizeSmall-433"
            >
              <span
                class="MuiChip-label-454 MuiChip-labelSmall-455"
              >
                Badger
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-15 MuiCard-root-406 MuiGrid-root-43 makeStyles-root-498 MuiGrid-container-44 MuiGrid-direction-xs-column-47 MuiPaper-elevation1-19 MuiPaper-rounded-16"
    >
      <div
        class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45"
      >
        <div
          class="makeStyles-root-407"
        >
          <img
            alt="DIGG logo"
            class="makeStyles-position-511"
            src="/assets/icons/digg.svg"
          />
        </div>
        <h6
          class="MuiTypography-root-183 makeStyles-name-500 MuiTypography-subtitle1-194 MuiTypography-displayInline-211"
        >
          Digg
        </h6>
      </div>
      <div
        class="MuiGrid-root-43 makeStyles-info-499 MuiGrid-container-44 MuiGrid-item-45"
      >
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-direction-xs-column-47 MuiGrid-grid-xs-true-77"
        >
          <p
            class="MuiTypography-root-183 MuiTypography-body1-185"
          >
            APY
          </p>
          <div
            class="MuiBox-root-412 MuiBox-root-512"
          >
            <p
              class="MuiTypography-root-183 makeStyles-apr-409 MuiTypography-body1-185 MuiTypography-colorTextPrimary-208 MuiTypography-displayInline-211"
            >
              8.17%
            </p>
            <img
              class="makeStyles-apyInfo-411"
              src="/assets/icons/apy-info.svg"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-direction-xs-column-47 MuiGrid-grid-xs-true-77"
        >
          <p
            class="MuiTypography-root-183 MuiTypography-body1-185"
          >
            My Deposits
          </p>
          <div
            class="MuiBox-root-412 MuiBox-root-515"
          >
            <p
              class="MuiTypography-root-183 MuiTypography-body1-185"
            >
              $-
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-43 MuiGrid-item-45"
      >
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-spacing-xs-1-66"
        >
          <div
            class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
          >
            <div
              class="MuiChip-root-432 makeStyles-tag-428 MuiChip-sizeSmall-433"
            >
              <span
                class="MuiChip-label-454 MuiChip-labelSmall-455"
              >
                Badger
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
